# cti-sys

./: .gitignore  .slugignore  CONTRIBUTING.md  Procfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  task.md
.github/workflows/: test.yml
docs/: db_diagram.drawio
gas_logic/: README.md  application_code.gs  attendance_submission_code.gs  code_alternate_email.gs  questionID.gs  response.gs  sanitize.gs
migrations/: README  env.py
migrations/versions/: 234eb1d89dec_add_launch_ca_region_to_students_drop_.py  ab2e5d7e05e8_add_last_canvas_access.py  c0025f85a371_add_student_count_to_attendance_table_.py
src/: api.py  config.py  main.py  models.py  schemas.py
src/accelerate/process_attendance/: router.py  service.py
src/app/: database.py  main.py  models.py  schemas.py
src/application/: router.py  schemas.py  service.py
src/applications/: models.py  router.py  schemas.py  service.py
src/applications/canvas_export/: constants.py  router.py  schemas.py  service.py  utils.py
src/applications/master_roster/: models.py  router.py  schemas.py  service.py
src/database/mongo/: core.py  service.py  tmp_schemas.py
src/database/postgres/: core.py  models.py  sqlalchemy_testing.py  (+2 more)
src/db_scripts/: create_database.py  mongo.py  sqlalchemy_testing.py
src/gsheet/: utils.py
src/reports/: models.py
src/students/: models.py
src/utils/: authorization.py  email.py  exceptions.py
tests/: conftest.py  test_main.py
tests/applications/: test_applications_router.py
(+65 files in other folders)
